# brain-eeg-signal-processing

./: README.md  pyproject.toml  requirements.txt
dataset/: bori_dataset_10s_eeg_1.edf  bori_dataset_10s_eeg_10.edf  bori_dataset_10s_eeg_2.edf  bori_dataset_10s_eeg_3.edf  bori_dataset_10s_eeg_4.edf  bori_dataset_10s_eeg_5.edf  bori_dataset_10s_eeg_6.edf  bori_dataset_10s_eeg_7.edf  bori_dataset_10s_eeg_8.edf  bori_dataset_10s_eeg_9.edf
