[project]
name = "brain-eeg-signal-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pyedflib>=0.1.42",
    "pywavelets>=1.9.0",
    "scipy>=1.16.3",
]
